# rag-playground

./: .env.defaults  .env.example  .gitignore  README.md  failed.txt  pyproject.toml  skills-lock.json  streamlit_app.py
.agents/skills/python-design-patterns/: SKILL.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  test-runner.agent.md
.github/instructions/: artifact_store.instructions.md  config.instructions.md  crawler.instructions.md  devcontainer.instructions.md  extractor.instructions.md  log4py.instructions.md  logging.instructions.md  progress.instructions.md  rag_engine.instructions.md  streamlit.instructions.md  tests.instructions.md  vector_indexer.instructions.md  writer.instructions.md
.github/skills/agent-orchestration/: SKILL.md
.github/skills/code-reviewer/: SKILL.md
.github/skills/developing-with-streamlit/: SKILL.md
.github/skills/test-runner/: SKILL.md
.streamlit/: secrets.toml.example
apps/streamlit/: README.md  pyproject.toml  requirements.txt  streamlit_app.py
apps/streamlit/.streamlit/: config.toml
apps/streamlit/app_pages/: __init__.py  _placeholder.py  basic_rag_qa.py  conversational_rag.py  crawl4md.py  rag_qa.py  semantic_search.py  vector_index.py
apps/streamlit/config/: basic_rag_qa_prompt.txt
apps/streamlit/src/app_support/: __init__.py  app_runtime.py  controls.py  dialog_ui.py  downloads_ui.py  focus.py  generated_files.py  pages.py  progress_chart.py  progress_ui.py  session_manager.py  settings.py  support.py
apps/streamlit/src/app_support/basic_rag_qa/: __init__.py  basic_rag_qa_form_ui.py  basic_rag_qa_history.py
apps/streamlit/src/app_support/crawl/: __init__.py  crawl_jobs.py  form_defaults.py  form_ui.py
apps/streamlit/src/app_support/i18n/: __init__.py  _types.py  en.py  id.py
apps/streamlit/src/app_support/rag_shared/: __init__.py  index_catalog.py  llm_form_ui.py  rag_ui.py
apps/streamlit/src/app_support/semantic_search/: __init__.py  search_history.py
apps/streamlit/src/app_support/site_graph_3d/: __init__.py  graph_data.py  launcher.py  viewer_assembler.py  viewer_labels.py
apps/streamlit/src/app_support/site_graph_3d/assets/: launcher.css  launcher.js  viewer.css  viewer.html  viewer.js
apps/streamlit/src/app_support/vector_index/: __init__.py  vector_form_ui.py  vector_index_jobs.py
apps/streamlit/src/crawl4md_streamlit/: controls.py  crawl_jobs.py  crawl_runtime.py  focus.py  form_defaults.py  form_ui.py  generated_files.py  llm_form_ui.py  log_context.py  pages.py  progress_chart.py  qa_form_ui.py  qa_history.py  rag_ui.py  search_history.py  session_manager.py  settings.py  support.py  vector_form_ui.py  vector_index_jobs.py
apps/streamlit/src/crawl4md_streamlit/i18n/: __init__.py  _types.py  en.py  id.py
apps/streamlit/tests/: test_app_smoke.py  test_basic_rag_qa.py  test_basic_rag_qa_form_ui.py  test_basic_rag_qa_history.py  test_controls.py  test_crawl_antibot.py  test_crawl_runtime.py  test_dialog_dismiss.py  test_dialog_ui.py  test_downloads_ui.py  test_focus.py  test_form_defaults.py  test_generated_files.py  test_i18n.py  test_index_catalog.py  test_language_selector.py  test_launcher.py  test_llm_form_ui.py  test_log_context.py  test_packaging.py  test_pages.py  test_progress_chart.py  test_progress_ui.py  test_qa_form_ui.py  test_qa_history.py  test_rag_qa.py  test_rag_ui.py  test_search_history.py  test_semantic_search.py  test_session_server_validation.py  test_settings.py  test_site_graph_3d.py  test_streamlit_boundaries.py  test_support.py  test_support_facade.py  test_vector_form_ui.py  test_vector_index_jobs.py
data/fixtures/crawl_results/: .gitkeep
data/fixtures/vector_indexes/: .gitkeep
docs/: ARCHITECTURE.md  BUILDING_ANOTHER_UI.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md
notebooks/: crawl4md.ipynb
src/artifact_store/: README.md  __init__.py  archives.py  crawl_results.py  logging.py  messages.py  naming.py  paths.py
src/crawl4md/: README.md  config.py  crawler.py  extractor.py  messages.py  naming.py  progress.py  sorter.py  streamlit_support.py  writer.py
src/crawl4md/_internal/: __init__.py  activity_log.py  block_detector.py  crawler_progress.py  docx.py  final_output.py  html_preprocess.py  markdown_pipeline.py  network_usage.py  pdf.py  product_metadata.py  progress_history.py  site_graph.py  url_filter.py
src/log4py/: README.md  __init__.py
src/rag_engine/: README.md  __init__.py  catalog.py  chat.py  config.py  messages.py  models.py  prompts.py  qa.py  retrieval.py  search.py
src/rag_engine/llm/: __init__.py  echo.py
src/vector_indexer/: README.md  __init__.py  chunking.py  config.py  document_loader.py  indexer.py  languages.py  manifest.py  messages.py  models.py  page_source.py
src/vector_indexer/embeddings/: __init__.py  base.py  catalog.py  local.py  openai.py  titan.py
src/vector_indexer/vector_store/: __init__.py  base.py  chroma.py
tests/: conftest.py  test_artifact_store_archives.py  test_artifact_store_boundary.py  test_artifact_store_crawl_results.py  test_artifact_store_logging.py  test_artifact_store_messages.py  test_artifact_store_naming.py  test_artifact_store_paths.py  test_block_detector.py  test_config.py  test_crawl4md_messages.py  test_crawler.py  test_crawler_antibot.py  test_crawler_output.py  test_crawler_progress.py  test_crawler_retry.py  test_docx.py  test_docx_internal.py  test_extractor.py  test_extractor_benchmark.py  test_extractor_items.py  test_extractor_links.py  test_extractor_product.py  test_extractor_supplementary.py  test_final_output.py  test_log4py.py  test_log4py_boundary.py  test_naming.py  test_network_usage.py  test_package_boundary.py  test_pdf.py  test_pdf_internal.py  test_progress.py  test_progress_history.py  test_rag_engine_boundary.py  test_rag_engine_catalog.py  test_rag_engine_chat.py  test_rag_engine_config.py  test_rag_engine_llm.py  test_rag_engine_messages.py  (+21 more)
