[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4md"
version = "0.1.0"
description = "Python library for crawling websites and extracting content as Markdown-formatted text files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "crawl4md contributors" }]
keywords = ["crawling", "markdown", "extraction", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "crawl4ai>=0.8.6",
    "trafilatura>=1.6.0",
    "markdownify>=0.11.0",
    "pydantic>=2.0",
    "nest-asyncio>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "mdformat>=0.7.19",
    "mdformat-gfm>=0.3.6",
    "pymupdf4llm>=0.0.17",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "ipykernel>=6.0",
    "streamlit==1.56.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
filterwarnings = [
    "ignore:Tesseract OCR is not installed:UserWarning",
]
