[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4md-streamlit"
version = "0.1.0"
description = "Bundled Streamlit app for the rag-playground libraries"
requires-python = ">=3.10"
dependencies = [
    "rag-playground[crawl,vector,bedrock,openai,rag]>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "streamlit==1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crawl4md_streamlit = ["data/eff_large_wordlist.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"